# Parallel_ICP_Algorithm

./: CMakeLists.txt  README.md  bun000_target.ply  icp_cuda.cu  results_cpu.txt  results_gpu.txt
data/: bun000_target.ply  dragon_target.ply  santa_target.ply
frames/: iter_0.ply  iter_10.ply  iter_12.ply  iter_14.ply  iter_15.ply  iter_16.ply  iter_18.ply  iter_2.ply  iter_20.ply  iter_22.ply  iter_24.ply  iter_25.ply  iter_26.ply  iter_28.ply  iter_30.ply  iter_32.ply  iter_34.ply  iter_35.ply  iter_36.ply  iter_38.ply  iter_4.ply  iter_40.ply  iter_42.ply  iter_44.ply  iter_45.ply  iter_46.ply  iter_48.ply  iter_5.ply  iter_50.ply  iter_6.ply  iter_8.ply
results/: cpu_bf_1.txt  cpu_bf_2.txt  cpu_bf_3.txt  cpu_bf_4.txt  cpu_brute_force.txt  cpu_kd_tree.txt  cpu_kdt_1.txt  cpu_kdt_2.txt  cpu_kdt_3.txt  cpu_kdt_4.txt  gpu_bf_1.txt  gpu_bf_2.txt  gpu_bf_3.txt  gpu_bf_4.txt  gpu_brute_force.txt  gpu_kd_tree.txt  gpu_kdt_1.txt  gpu_kdt_2.txt
src/: generate_data.cpp  icp_cuda.cu  icp_cuda_kdtree.cu  icp_engine.cpp  icp_utils.h  kdtree.h  visualizer.cpp
